--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,33 @@ body {
   justify-content: center;
   align-items: center;
 }
+/* shared utility classes */
+button:hover {
+  cursor: pointer;
+  opacity: 90%;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.yellow {
+  color: var(--yellow);
+}
+
+.turquoise {
+  color: var(--turquoise);
+}
+
+.shadow {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.border {
+  border: 1px solid rgba(211, 211, 211, 0.4) !important;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 80px);
@@ -37,24 +64,133 @@ body {
   gap: 5px;
 }
 
+@media (min-width: 768px) {
+  .grid {
+    width: 490px;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 50px repeat(3, 150px) 60px;
+    gap: 20px;
+  }
+}
 .turn {
-  background-color: green;
+  color: var(--yellow);
   grid-column-start: 1;
   grid-column-end: 3;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  align-self: center;
+}
+
+@keyframes turn-text-animation {
+  0% {
+    opacity: 0%;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateX(0);
+  }
+}
+.turn p {
+  font-size: 14px;
+  margin-left: 10px;
+  animation: turn-text-animation 0.6s ease-in-out;
+}
+
+@keyframes turn-icon-animation {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.turn i {
+  font-size: 1.8rem;
+  margin-left: 10px;
+  animation: turn-icon-animation 0.6s ease-in-out;
+}
+
+/* menu styles */
+.menu {
+  position: relative;
+}
+
+.menu-btn {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  background-color: rgba(211, 211, 211, 0.05);
+  color: white;
+}
+
+.menu-btn:hover,
+.menu-btn:focus {
+  background-color: rgba(211, 211, 211, 0.07);
+}
+
+.items {
+  position: absolute;
+  z-index: 10;
+  top: 60px;
+  right: 0;
+  background-color: #203139;
+  padding: 10px;
+  border-radius: 2px;
+}
+
+.items button {
+  color: white;
+  background-color: transparent;
+  padding: 8px;
+}
+
+.items button:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .square {
-  background-color: red;
+  background-color: var(--gray);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+}
+
+.square:hover {
+  cursor: pointer;
+  opacity: 90%;
 }
 
 .score {
-  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
 }
 
-.actions {
-  background-color: purple;
+.score p {
+  font-size: 14px;
+  font-weight: 600;
 }
 
+.score span {
+  font-size: 12px;
+  margin-top: 2px;
+}
+
+/* footer styles */
 footer {
   color: white;
   margin-top: 50px;
@@ -67,4 +203,37 @@ footer p {
 
 footer a {
   color: var(--yellow);
+}
+
+/* Modal content to show when game ends */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content {
+  height: 150px;
+  width: 100%;
+  max-width: 300px;
+  background-color: #2a4544;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: white;
+  margin: 2px;
+}
+
+.modal-content button {
+  padding: 10px;
+  background-color: var(--turquoise);
+  color: #2a4544;
+  border-radius: 3px;
 }
